--- a/wp-content/themes/noia-theme/src/styles/components/_accordion.scss
+++ b/wp-content/themes/noia-theme/src/styles/components/_accordion.scss
@@ -221,7 +221,8 @@
 
 .accordion-item--show {
 	width: 100% !important;
-	min-height: 90vh;
+	// min-height: 90vh;
+	height: auto;
 	transition: height 600ms cubic-bezier(0.4, 0.0, 0.2, 1);
 	@include mq(medium) {
 		height: 90vh;
